--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@chakra-ui/react": "^2.8.1",
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
+    "@hookform/resolvers": "^2.9.11",
     "@tanstack/react-query": "4.28",
     "@tanstack/react-query-devtools": "4.28",
     "axios": "^1.3.4",
@@ -19,9 +20,11 @@
     "ms": "^2.1.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.47.0",
     "react-icons": "^4.7.1",
     "react-infinite-scroll-component": "6.1",
     "react-router-dom": "^6.10.0",
+    "zod": "^3.22.4",
     "zustand": "^4.3.7"
   },
   "devDependencies": {
