--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@hookform/resolvers": "^2.9.11",
     "@tanstack/react-query": "4.28",
     "@tanstack/react-query-devtools": "4.28",
+    "antd": "^5.9.4",
     "axios": "^1.3.4",
     "framer-motion": "^10.16.4",
     "ms": "^2.1.3",
